[package]
name = "dna2rna-cli"
version = "0.1.0"
authors = ["Pär Bohrarper <par.bohrarper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
dna2rna = { path = "../dna2rna" }
log = "0.4.8"
env_logger = "0.7.1"
