[package]
name = "rna2fuun-ui"
version = "0.1.0"
authors = ["Pär Bohrarper <par.bohrarper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^0.7", features = ["fltk-bundled"] }
rna2fuun = { path = "../rna2fuun" }
